@@ -33,7 +33,6 @@ class ColorButton : public QPushButton
 
   public:
     ColorButton (QWidget *, QColor &);
-    ~ColorButton ();
     void getColor (QColor &);
     void setColorButton ();
     void setDialogOff();
