@@ -20,7 +20,7 @@ HEADERS += Scaler.h
 HEADERS += PrefDialog.h
 HEADERS += ColorButton.h
 HEADERS += FontButton.h
-HEADERS += FileButton.h
+#HEADERS += FileButton.h
 HEADERS += Bar.h
 HEADERS += Config.h
 HEADERS += Plot.h
@@ -48,7 +48,7 @@ SOURCES += Scaler.cpp
 SOURCES += PrefDialog.cpp
 SOURCES += ColorButton.cpp
 SOURCES += FontButton.cpp
-SOURCES += FileButton.cpp
+#SOURCES += FileButton.cpp
 SOURCES += Bar.cpp
 SOURCES += Config.cpp
 SOURCES += Plot.cpp
