@@ -10,6 +10,38 @@ if ($a ne "0")
   exit; # we have a non zero return code, exit script
 }
 
+print STDOUT "SET_INDICATOR,buy,30"; # create the RSI buy line
+$a = <STDIN>; # get the return code
+chomp($a); # remove the \n
+if ($a ne "0")
+{
+  exit; # we have a non zero return code, exit script
+}
+
+print STDOUT "SET_INDICATOR,sell,70"; # create the RSI sell line
+$a = <STDIN>; # get the return code
+chomp($a); # remove the \n
+if ($a ne "0")
+{
+  exit; # we have a non zero return code, exit script
+}
+
+print STDOUT "PLOT,buy,RSI_Buy,yellow,Horizontal"; # plot the RSI buy line
+$a = <STDIN>; # get the return code
+chomp($a); # remove the \n
+if ($a ne "0")
+{
+  exit; # we have a non zero return code, exit script
+}
+
+print STDOUT "PLOT,sell,RSI_Sell,yellow,Horizontal"; # plot the RSI sell line
+$a = <STDIN>; # get the return code
+chomp($a); # remove the \n
+if ($a ne "0")
+{
+  exit; # we have a non zero return code, exit script
+}
+
 print STDOUT "PLOT,RSI,RSI,red,Line"; # plot the RSI line
 $a = <STDIN>; # get the return code
 chomp($a); # remove the \n
